--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "@email-factory-poc/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
   "private": true,
+  "workspaces": [
+    "packages/transactional",
+    "apps/transactional-api"
+  ],
   "dependencies": {
     "axios": "^1.6.0",
     "express": "~4.18.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -16,24 +21,44 @@
     "@nx/jest": "18.0.4",
     "@nx/js": "18.0.4",
     "@nx/node": "18.0.4",
+    "@nx/react": "18.0.4",
+    "@nx/rollup": "18.0.4",
     "@nx/workspace": "18.0.4",
+    "@rollup/plugin-url": "^7.0.0",
+    "@svgr/rollup": "^8.0.1",
     "@swc-node/register": "~1.8.0",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@swc/jest": "0.2.20",
+    "@testing-library/react": "14.0.0",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "esbuild": "^0.19.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "18.0.4",
     "prettier": "^2.6.2",
+    "swc-loader": "0.1.15",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.2"
-  }
+    "typescript": "~5.3.2",
+    "verdaccio": "^5.0.4"
+  },
+  "nx": {
+    "includedScripts": []
+  },
+  "packageManager": "yarn@4.1.0"
 }
